project( cam )
cmake_minimum_required( VERSION 2.6 )
install( DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/bitmaps" DESTINATION "PyCAM" )
install( DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/icons" DESTINATION "PyCAM" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/heekscad.png" DESTINATION "PyCAM" )
add_subdirectory( CAM )
