project( cam )
cmake_minimum_required( VERSION 2.6 )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/area_funcs.py" DESTINATION "PyCAM" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/attach.py" DESTINATION "PyCAM" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/cam.py" DESTINATION "PyCAM" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/CamApp.py" DESTINATION "PyCAM" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/CamContextTool.py" DESTINATION "PyCAM" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/CamObject.py" DESTINATION "PyCAM" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/consts.py" DESTINATION "PyCAM" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/default.tooltable" DESTINATION "PyCAM" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/depth_params.py" DESTINATION "PyCAM" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/DepthOp.py" DESTINATION "PyCAM" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/DepthOpDlg.py" DESTINATION "PyCAM" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/Drilling.py" DESTINATION "PyCAM" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/DrillingDlg.py" DESTINATION "PyCAM" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/kurve_funcs.py" DESTINATION "PyCAM" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/Machine.py" DESTINATION "PyCAM" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/NcCode.py" DESTINATION "PyCAM" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/ocl_funcs.py" DESTINATION "PyCAM" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/OpDlg.py" DESTINATION "PyCAM" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/Operation.py" DESTINATION "PyCAM" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/Operations.py" DESTINATION "PyCAM" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/OutputWindow.py" DESTINATION "PyCAM" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/Pattern.py" DESTINATION "PyCAM" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/PatternDlg.py" DESTINATION "PyCAM" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/Patterns.py" DESTINATION "PyCAM" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/Pocket.py" DESTINATION "PyCAM" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/PocketDlg.py" DESTINATION "PyCAM" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/PopupMenu.py" DESTINATION "PyCAM" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/Profile.py" DESTINATION "PyCAM" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/ProfileDlg.py" DESTINATION "PyCAM" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/Program.py" DESTINATION "PyCAM" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/ProgramDlg.py" DESTINATION "PyCAM" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/ProgramWindow.py" DESTINATION "PyCAM" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/PyProcess.py" DESTINATION "PyCAM" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/recreator.py" DESTINATION "PyCAM" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/ScriptOp.py" DESTINATION "PyCAM" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/ScriptOpDlg.py" DESTINATION "PyCAM" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/SketchOp.py" DESTINATION "PyCAM" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/SketchOpDlg.py" DESTINATION "PyCAM" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/SolidsDlg.py" DESTINATION "PyCAM" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/SpeedOp.py" DESTINATION "PyCAM" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/SpeedOpDlg.py" DESTINATION "PyCAM" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/Stock.py" DESTINATION "PyCAM" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/StockDlg.py" DESTINATION "PyCAM" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/Stocks.py" DESTINATION "PyCAM" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/Surface.py" DESTINATION "PyCAM" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/SurfaceDlg.py" DESTINATION "PyCAM" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/Surfaces.py" DESTINATION "PyCAM" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/Tag.py" DESTINATION "PyCAM" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/Tags.py" DESTINATION "PyCAM" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/Tool.py" DESTINATION "PyCAM" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/ToolDlg.py" DESTINATION "PyCAM" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/Toolpath.py" DESTINATION "PyCAM" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/Tools.py" DESTINATION "PyCAM" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/transform.py" DESTINATION "PyCAM" )
install( DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/bitmaps" DESTINATION "PyCAM" )
install( DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/icons" DESTINATION "PyCAM" )
install( DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/nc" DESTINATION "PyCAM" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/heekscnc.png" DESTINATION "PyCAM" )
add_subdirectory( CAM )
 